# Controller/ClinicalController.go
@@ -15,7 +15,7 @@ type ClinicalController struct {
 // @Accept json
 // @Produce json
 // @Param data body Request.ClinicalRegisterRequest true "Dados da nova Clinica"
-// @Success 201 {object} Response.ClinicalRegisterResponse
+// @Success 201 {object} Response.ClinicalInfo
 // @Failure 400 {object} Response.ErrorResponse "Requisição inválida"
 // @Failure 500 {object} Response.ErrorResponse "Erro interno"
 // @Router /api/v1/clinicl/register [post]
